# bsc-thesis-code

./: .gitignore  LICENSE  README.md  docker-compose.yml  models_package_build.sh  stress_test.ipynb
artifacts/: gagm_base-0.0.1-py3-none-any.whl
backend/: Dockerfile  requirements.txt  start.sh
backend/app/: arango_connector.py  auth_crud.py  auth_methods.py  auth_models.py  auth_schemas.py  data_manager.py  main.py  model_manager.py  rel_db.py
backend/app/classes/: group_model.py  permission_model.py  user_model.py
backend/app/config/: database_config.py
backend/app/docs/endpoints/: health_check.md
backend/app/docs/endpoints/data/: get_data_with_type.md  get_notes.md  get_tagged_data.md  post_data.md
backend/app/docs/endpoints/models/: delete_model.md  get_model.md  list_models.md  reload_models.md  upload_model.md
backend/app/exceptions/: data_exceptions.py
backend/app/models/: ex_checkpoint.py  ex_checkpoint_of_dungeon.py  ex_dialogue_element.py  ex_dialogue_of_npc.py  ex_dungeon.py  ex_enemy.py  ex_location.py  ex_npc.py  ex_position.py
backend/app/responses/: health_check.py  key_response.py  model_response.py  models_response.py  reduced_models_response.py
backend/app/routers/: authentication.py  data.py  models.py  tags.py
backend/gagm-base-test/: LICENSE.txt  README.md  pyproject.toml
backend/gagm-base-test/src/gagm_base/: asset_model.py  node_model.py  tag_model.py
frontend/: Dockerfile  requirements.txt  start.sh
frontend/app/: auth_crud.py  auth_models.py  auth_schemas.py  authentication.py  configuration.py  database.py  main.py  utils.py
frontend/app/exceptions/: start_exception.py
frontend/app/responses/: health_check.py
frontend/app/routers/: auth.py  dashboard.py  editor.py  forward.py
frontend/app/static/: base.css  code.css  editor.css  login.css  main.css
frontend/app/static/scripts/: adminDashboard.js  common.js  editor.js  filtering.js  graph.js  profile.js  users.js
frontend/app/templates/: base.html  error.html  escaped.html  form_test.html  index.html  model.html
frontend/app/templates/admin/: dashboard.html  user_management.html  users_table.html
frontend/app/templates/forwarding/: error.html  success.html
frontend/app/templates/user/: graph_view.html  login.html  main.html  profile.html
gagm-base/: LICENSE.txt
gagm-base/src/gagm_base/: __about__.py  __init__.py  edge_model.py  tag_edge.py
